Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,9 +21,8 @@ steps:
 
 - task: PublishPipelineArtifact@1
   inputs:
-    targetPath: '$(Pipeline.Workspace)/artifacts_sample.txt'
+    targetPath: '$(Build.SourcesDirectory)/artifacts_sample.txt'
     publishLocation: pipeline
-    artifact: 'drop'
 
 - script: |
     python -m pip install --upgrade pip
